2000-11-26  Jeff Freedman <freedman@hevanet.com>
	* Split up imagewin.{cc,h} and moved to imagwin directory.

2000-11-27  Dancer Vesperman <dancer@users.sourceforge.net>
	* Some people are having trouble including pthread_alloc. Include cstring as an alternative

2000-11-27  Dancer Vesperman <dancer@users.sourceforge.net>
	* Never call the mixer object through it's pointer without verifying the validity of that pointer. Should fix occasional segfault at shutdown

2000-11-27  Dancer Vesperman <dancer@users.sourceforge.net>
	* Create newstrdup() in gumps.cc as an interim solution. Goal is to encapsulate all char arrays into an efficient storage unit (coming soon. Be patient). For now we lose strdup to avoid the mixed memory models. newstrdup() will throw std::invalid_argument() if handed a NULL.
	* Change all strdup()'s to newstrdup()
	* Change free() for all strdup'ed() blocks to delete []
	* alloc.cc: Something changed in exception specification. Add std::
	* alloc.cc: pthread_alloc declares memset. Include it

2000-11-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* README.BeOS: added
	* README.win32: added (temporarily unavailable) to cross-compiling instructions	
	* Makefile.be: added 'make bindist' option to automate distributing
	* actors.cc: removed an inline in BeOS. (won't compile otherwise...)

2000-11-26  Max Horn  <max@quendi.de>
	* files/utils.cc: fixed a bug in get_system_path (it sometimes "forgot" to call switch_slashes)

2000-11-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* beos/exult.rsrc: BeOS resource file
	* Makefile.be: include resource file in binary

2000-11-26  Max Horn  <max@quendi.de>
	* mouse.cc: mouse is now positioned correctly directly after creation

2000-11-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gamewin.cc: fixed problem with "journey onward" right after "create new game"

2000-11-26  Max Horn  <max@quendi.de>